--- a/orko-ui/pom.xml
+++ b/orko-ui/pom.xml
@@ -30,6 +30,10 @@
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
         <version>${frontend-maven-plugin-version}</version>
+        <configuration>
+          <workingDirectory>${basedir}</workingDirectory>
+          <installDirectory>${basedir}</installDirectory> 
+        </configuration>
         <executions>
           <execution>
             <phase>compile</phase>
