--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -33,12 +33,13 @@
     "styled-system": "^3.1.11"
   },
   "devDependencies": {
+    "react-app-rewired": "^1.6.2",
     "worker-loader": "^2.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
