Fix bug where trade signals don't arrive unless you're also subscribed to a coin's ticker

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /orko-common/.settings/org.jboss.tools.maven.apt.prefs
 /orko-ui/.settings
 /orko-ui/node
+/orko-all-in-one/src/main/resources/assets
