--- a/orko-all-in-one/example-config.yml
+++ b/orko-all-in-one/example-config.yml
@@ -4,7 +4,8 @@ auth:
 #  secretKey: Generate this using com.grahamcrockford.orko.cli.GenerateSecretKey when you move to production
   proxied: false #  Set this to true if you deploy to Heroku
   whitelistExpirySeconds: 14400
-#database:
+database:
+  mapDbFileDir: .
 #  mongoClientURI: mongodb://jsmith:some-initial-password@localhost:27017/yourdb # Your mongoDB connection details.
 #  lockSeconds: 10
 # telegram:
