--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "pom.xml" }}
           - v1-dependencies-
-      - run: mvn clean package -T 1C
+      - run: mvn clean package -T 1C -DskipSlowTests=true
       - save_cache:
           paths:
             - ~/.m2
