--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,8 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "pom.xml" }}
           - v1-dependencies-
-      - run: mvn dependency:go-offline 
+      - run: mvn clean package -T 1C -DskipSlowTests=true
       - save_cache:
           paths:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
-      - run: mvn integration-test -T 1C -DskipSlowTests=true
-
