Switch to connected-react-router, clean up selected coin state handling and fix display bug with balance

--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@mars/heroku-js-runtime-env": "^3.0.2",
     "@okta/okta-signin-widget": "^2.13.0",
+    "connected-react-router": "^4.5.0",
     "fetch": "^1.1.0",
     "http-proxy-middleware": "^0.19.0",
     "immutable": "^3.8.2",
     "polished": "^1.9.3",
-    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.5.2",
@@ -17,7 +17,6 @@
     "react-page-visibility": "^3.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "2.0.5",
     "react-table": "^6.8.6",
     "recompose": "^0.30.0",
