--- a/orko-ui/public/manifest.json
+++ b/orko-ui/public/manifest.json
@@ -1,7 +1,13 @@
 {
-  "short_name": "oco",
-  "name": "Background Trade Control",
-  "icons": [ ],
+  "short_name": "orko",
+  "name": "Orko",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "48x48 32x32 16x16",
+      "type": "image/x-icon"
+    }
+  ],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#aaa",
