--- a/orko-all-in-one/heroku-config.yml
+++ b/orko-all-in-one/heroku-config.yml
@@ -5,9 +5,9 @@ auth:
   whitelistExpirySeconds: ${WHITELIST_EXPIRY_SECONDS:-86400}
   secretKey: ${AUTH_TOKEN}
   okta:
-    baseUrl: ${OKTA_BASEURL}
-    issuer: ${OKTA_ISSUER}
-    clientId: ${OKTA_CLIENTID}
+    baseUrl: ${OKTA_BASEURL:-}
+    issuer: ${OKTA_ISSUER:-}
+    clientId: ${OKTA_CLIENTID:-}
 telegram:
   botToken: ${TELEGRAM_BOT_TOKEN}
   chatId: ${TELEGRAM_CHAT_ID}
