--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,9 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "pom.xml" }}
-          - v1-dependencies-
-      - run: mvn clean package -T 1C -DskipSlowTests=true
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            - v1-dependencies-
+      - run: mvn -Pproduction clean package -T 1C -DskipSlowTests=true
       - save_cache:
           paths:
             - ~/.m2
