Make sure that 2FA authenticator key generation actually works! Was broken by some previous changes.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@
 /orko-all-in-one/jobs.db.wal.0
 /orko-all-in-one/subscriptions.db
 /orko-all-in-one/subscriptions.db.wal.0
+/ipwl.db
+/ipwl.db.wal.0
+/jobs.db
+/jobs.db.wal.0
+/subscriptions.db
