--- a/orko-all-in-one/heroku-config.yml
+++ b/orko-all-in-one/heroku-config.yml
@@ -3,14 +3,14 @@ auth:
   httpsOnly: true
   proxied: true
   whitelistExpirySeconds: ${WHITELIST_EXPIRY_SECONDS:-86400}
-  secretKey: ${AUTH_TOKEN}
+  secretKey: ${AUTH_TOKEN:-}
   okta:
     baseUrl: ${OKTA_BASEURL:-}
     issuer: ${OKTA_ISSUER:-}
     clientId: ${OKTA_CLIENTID:-}
 telegram:
-  botToken: ${TELEGRAM_BOT_TOKEN}
-  chatId: ${TELEGRAM_CHAT_ID}
+  botToken: ${TELEGRAM_BOT_TOKEN:-}
+  chatId: ${TELEGRAM_CHAT_ID:-}
 database:
   mongoClientURI: ${MONGODB_URI}
   lockSeconds: ${LOCK_SECONDS:-45}
@@ -52,7 +52,7 @@ jerseyClient:
   timeout: 15000ms
   connectionTimeout: 15000ms
   connectionRequestTimeout: 15000ms
-logging: 
+logging:
   loggers:
     "com.grahamcrockford.orko": ${LOG_LEVEL:-INFO}
     "info.bitrich.xchangestream.service.netty": ${LOG_LEVEL:-INFO}
