Remove Snyk from default deployment and change button to use Bitbucket

--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
       "quantity": 1
     }
   },
-  "addons": ["mongolab", "papertrail", "snyk"],
+  "addons": ["mongolab", "papertrail"],
   "buildpacks": [
     {
       "url": "heroku/java"
