--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@
     <reflections.version>0.9.11</reflections.version>
     <googleauth.version>1.1.5</googleauth.version>
     <okta-jwt-verifier-version>0.3.0</okta-jwt-verifier-version>
+    <dropwizard.auth.jwt.version>1.1.2-0</dropwizard.auth.jwt.version>
     <dropwizard-websockets-version>1.3.2</dropwizard-websockets-version>
     <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
 
@@ -329,6 +330,11 @@
         <groupId>com.okta.jwt</groupId>
         <artifactId>okta-jwt-verifier</artifactId>
         <version>${okta-jwt-verifier-version}</version>
+      </dependency>
+      <dependency>
+          <groupId>com.github.toastshaman</groupId>
+          <artifactId>dropwizard-auth-jwt</artifactId>
+          <version>${dropwizard.auth.jwt.version}</version>
       </dependency>
       <dependency>
         <groupId>com.liveperson</groupId>
