Add basic JWT auth.

--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -43,8 +43,8 @@
       <artifactId>okta-jwt-verifier</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.github.toastshaman</groupId>
-      <artifactId>dropwizard-auth-jwt</artifactId>
+        <groupId>org.bitbucket.b_c</groupId>
+        <artifactId>jose4j</artifactId>
     </dependency>
 
     <dependency>
