--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
     <reflections.version>0.9.11</reflections.version>
     <googleauth.version>1.1.5</googleauth.version>
     <okta-jwt-verifier-version>0.3.0</okta-jwt-verifier-version>
-    <dropwizard.auth.jwt.version>1.1.2-0</dropwizard.auth.jwt.version>
+    <jose4j.version>0.6.4</jose4j.version>
     <dropwizard-websockets-version>1.3.2</dropwizard-websockets-version>
     <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
 
@@ -332,9 +332,9 @@
         <version>${okta-jwt-verifier-version}</version>
       </dependency>
       <dependency>
-          <groupId>com.github.toastshaman</groupId>
-          <artifactId>dropwizard-auth-jwt</artifactId>
-          <version>${dropwizard.auth.jwt.version}</version>
+          <groupId>org.bitbucket.b_c</groupId>
+          <artifactId>jose4j</artifactId>
+          <version>${jose4j.version}</version>
       </dependency>
       <dependency>
         <groupId>com.liveperson</groupId>
