--- a/orko-all-in-one/heroku-config.yml
+++ b/orko-all-in-one/heroku-config.yml
@@ -4,6 +4,11 @@ auth:
   proxied: true
   whitelistExpirySeconds: ${WHITELIST_EXPIRY_SECONDS:-86400}
   secretKey: ${AUTH_TOKEN:-}
+  jwt:
+    userName: ${SIMPLE_AUTH_USERNAME:-}
+    password: ${SIMPLE_AUTH_PASSWORD:-}
+    secret: ${SIMPLE_AUTH_SECRET:-}
+    expirationMinutes: ${SIMPLE_AUTH_TOKEN_EXPIRY_MINUTES:-1440}
   okta:
     baseUrl: ${OKTA_BASEURL:-}
     issuer: ${OKTA_ISSUER:-}
